--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,10 @@
     "angular": "~1.4.8",
     "jquery": "~2.1.4",
     "bootstrap": "~3.3.6",
-    "compass-mixins": "~1.0.2"
+    "compass-mixins": "~1.0.2",
+    "candy": "~2.1.0"
+  },
+  "resolutions": {
+    "jquery": "~2.1.4"
   }
 }
